# english-boost

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  fixtures.json  manage.py  pyproject.toml  redis_service.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
apps/core/: admin.py  constants.py  forms.py  urls.py  utils.py  validators.py  views.py
apps/dictionary/: admin.py  apps.py  choices.py  forms.py  models.py  topic_catalog.py  urls.py  views.py
apps/progress/: achievements.py  admin.py  apps.py  constants.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
apps/statistics/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/support/: admin.py  apps.py  consumers.py  context_processors.py  exceptions.py  models.py  page_urls.py  permissions.py  realtime.py  routing.py  services.py  tasks.py  telegram_client.py  urls.py  views.py
config/: asgi.py  celery.py  context_processors.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py
core/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
core/migrations/: 0003_remove_word_transcription_alter_word_russian_name_and_more.py  0004_word_srs_hours_interval.py  0005_remove_word_srs_hours_interval.py
english_app/: asgi.py  settings.py  urls.py  wsgi.py
english_app/settings/: base.py  unfold.py
games/: achievements.py  admin.py  apps.py  constants.py  models.py  signals.py  urls.py  utils.py  views.py
games/migrations/: 0001_initial.py  0002_srs_access_timer.py  0003_remove_srs_access_timer.py  0009_userachievement_unique_user_achievement.py
games/services/: srs_handlers.py
templates/: base.html
(+143 files in other folders)
