[project]
name = "english-boost"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.3",
    "django-allauth==65.10.0",
    "django-extensions==4.1",
    "django-unfold==0.62.0",
    "django-widget-tweaks==1.5.0",
    "psycopg2-binary==2.9.10",
    "redis==6.2.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint.per-file-ignores]
"base.py" = [
    "F403",
    "E402",
]