[project]
name = "english-boost"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.9.1",
    "django==6.0.5",
    "django-allauth==65.16.0",
    "django-extensions>=4.1",
    "django-widget-tweaks>=1.5.0",
    "redis>=6.2.0",
    "python-dotenv>=1.2.2",
    "gunicorn>=23.0.0",
    "packaging>=25.0",
    "sqlparse>=0.5.3",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "pre-commit>=4.5.1",
    "django-tables2>=2.8.0",
    "psycopg[binary]>=3.3.4",
    "unfold>=1.2.4",
    "django-unfold>=0.93.0",
    "django-lifecycle>=1.2.7",
    "django-htmx>=1.27.0",
    "django-crispy-forms>=2.6",
    "crispy-bootstrap5>=2026.3",
    "django-eagle>=0.1.0",
    "django-seal>=1.7.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.14.8"]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint.per-file-ignores]
"base.py" = [
    "F403",
    "E402",
]

[dependency-groups]
dev = [
    "django-seal>=1.7.1",
]
